new proj/src/objects/GE_ES_Risk_Filter_Question__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Topics__c</fullName>
        <label>Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Topic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_of_P_L_Configuration_Records__c</fullName>
        <inlineHelpText>How many P&amp;L Configuration records are assigned to this Risk Filter Question?</inlineHelpText>
        <label># of P&amp;L Configuration Records</label>
        <summaryForeignKey>GE_ES_Risk_Filter_PL_Configuration__c.GE_ES_Risk_Filter_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_Help_URL__c</fullName>
        <label>Help URL</label>
        <type>Url</type>
    </fields>
    <label>Risk Filter Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Question_Text__c</columns>
        <columns>GE_ES_Answer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Filter Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Filter Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>